--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -47,6 +47,15 @@
 
         </LinearLayout>
 
+        <ImageButton
+            android:id="@+id/chat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_chat_icon"
+            android:background="?selectableItemBackgroundBorderless"
+            android:layout_gravity="center"
+            android:contentDescription="Chat" />
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
