--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#FFF2E1"
-tools:context=".ExploreFragment">
+tools:context=".fragements.ExploreFragment">
 
 <RelativeLayout
     android:layout_width="match_parent"
