--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MessagesFragment">
+    tools:context=".fragements.MessagesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
