--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".fragements.NotificationsFragment">
+    tools:context=".fragments.NotificationsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
