[REBASE] Matches: include said's matches fragment

--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -6,13 +6,10 @@
     android:background="@color/white"
     tools:context=".fragments.MatchesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Matches Component"
-        android:textSize="30dp"
-        android:layout_gravity="center"
-        android:textColor="@color/black" />
+    <!-- RecyclerView to display matches -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
