--- a/app/src/main/res/menu/navbar.xml
+++ b/app/src/main/res/menu/navbar.xml
@@ -13,10 +13,11 @@
         android:id="@+id/matches"
         android:title="Matches"
         android:icon="@drawable/baseline_sports_soccer_24" />
-    <item
+<!--    <item
         android:id="@+id/notifications"
         android:title="Notifications"
         android:icon="@drawable/baseline_notifications_24" />
+-->
     <item
         android:id="@+id/messages"
         android:title="Messages"
