Fix update problem + Display the profile photo of each post

--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -5,8 +5,9 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
+    android:layout_margin="10dp"
     android:background="@color/white"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="5dp"
     app:cardElevation="4dp"
     android:layout_marginBottom="10dp">
 
@@ -19,8 +20,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginRight="16dp"
             android:src="@drawable/baseline_account_circle_24" />
 
@@ -36,8 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/user_bio"
