--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -6,8 +6,9 @@ android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal"
 android:padding="16dp"
+    android:layout_margin="10dp"
 android:background="@color/white"
-app:cardCornerRadius="8dp"
+app:cardCornerRadius="5dp"
 app:cardElevation="4dp"
 android:layout_marginBottom="10dp">
 
@@ -20,8 +21,8 @@ android:layout_marginBottom="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/chatImage"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginRight="16dp"
         android:src="@drawable/ic_anon_user_48dp" />
 
@@ -39,7 +40,7 @@ android:layout_marginBottom="10dp">
             android:layout_height="wrap_content"
             android:hint="Chat Name"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
@@ -60,7 +61,7 @@ android:layout_marginBottom="10dp">
         android:contentDescription="Chat"
         android:text="hh:mm:ss \nDD/MM/YYYY"
         android:textDirection="rtl"
-        android:textSize="12sp" />
+        android:textSize="10sp" />
 
 </LinearLayout>
 
