--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#F1FADA"
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:text="PROFILE INFORMATIONS"
-        android:textColor="@color/black"
+        android:textColor="#265073"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,6 +42,7 @@
                 android:id="@+id/labelUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#2D9596"
                 android:text="Username" />
 
             <EditText
@@ -51,7 +52,7 @@
                 android:ems="10"
                 android:inputType="text"
                 android:text=""
-                android:textColor="@color/black" />
+                android:textColor="#265073" />
         </LinearLayout>
 
         <LinearLayout
@@ -74,6 +75,7 @@
                     android:id="@+id/labelFirstname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="#2D9596"
                     android:text="Firstname" />
 
                 <EditText
@@ -83,7 +85,7 @@
                     android:ems="10"
                     android:inputType="text"
                     android:text=""
-                    android:textColor="@color/black" />
+                    android:textColor="#265073" />
             </LinearLayout>
 
             <LinearLayout
@@ -96,6 +98,7 @@
                     android:id="@+id/labelLastname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="#2D9596"
                     android:text="Lastname" />
 
                 <EditText
@@ -105,7 +108,7 @@
                     android:ems="10"
                     android:inputType="text"
                     android:text=""
-                    android:textColor="@color/black" />
+                    android:textColor="#265073" />
             </LinearLayout>
 
         </LinearLayout>
@@ -122,6 +125,7 @@
                 android:id="@+id/labelBio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#2D9596"
                 android:text="Bio" />
 
             <EditText
@@ -131,17 +135,19 @@
                 android:ems="10"
                 android:inputType="text"
                 android:text=""
-                android:textColor="@color/black" />
+                android:textColor="#265073" />
         </LinearLayout>
 
     </LinearLayout>
 
     <ImageButton
         android:id="@+id/mainRedirect"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/my_button_transparent"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="#265073"
         android:contentDescription="@string/app_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -153,6 +159,7 @@
         android:layout_height="60dp"
         android:text="UPDATE"
         android:textColor="@color/white"
+        android:backgroundTint="#265073"
         android:background="@drawable/my_button_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
